Fix divs not fitting content

--- a/style.css
+++ b/style.css
@@ -225,7 +225,8 @@ footer a:hover {
 
 #skinSelect {
     width: 70%;
-    height: 100%;
+    height: fit-content;
+    min-height: 100%;
     left: 0;
     right: 0;
     top: 0;
@@ -245,8 +246,7 @@ footer a:hover {
 }
 
 #skinChange_SelectedImg {
-    max-width: 80%;
-    max-height: 80%;
+    height: 10vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
